<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">BBPaw Center</string>
    
    <string name="str_null"></string>
    <string name="activity_not_found">Coming soon!</string>
    <string name="start_app_error"> Unable to open the application!</string>
    <string name="start_bbpaw_browser_error"> Unable to open the bbpaw browser!</string>
    
    <string name="study_time_title_text">"Time for Learning:"</string>
    <string name="study_content_title_text">"Introduction to Content:"</string>
    <string name="vaccine_title_text">"Vaccination Schedule"</string>
    <string name="vaccine_birth_date_text">"Birth Date"</string>
    <string name="vaccine_calculate_btn_text">"Start Calculation"</string>
    <string name="vaccine_recalculate_btn_text">"Recalculate"</string>
    <string name="vaccine_all_select_text">"A key to remind"</string>
    <string name="vaccine_checkebox_title_text">"Remind"</string>
    <string name="vaccine_item_age_title">"Age"</string>
    <string name="vaccine_item_type_title">"Vaccine Types"</string>
    <string name="vaccine_item_explain_title">"Instruction"</string>
    <string name="vaccine_item_date_title">"Vaccination Date"</string>
    
     <string name="calendar_sun_text">"Sun"</string>
    <string name="calendar_mon_text">"Mon"</string>
    <string name="calendar_tues_text">"Tue"</string>
    <string name="calendar_wed_text">"Wed"</string>
    <string name="calendar_thur_text">"Thur"</string>
    <string name="calendar_fri_text">"Fri"</string>
    <string name="calendar_sat_text">"Sat"</string>
    <string name ="calendar_top_format_text"><xliff:g id="year">%1$s</xliff:g>Year<xliff:g id="month">%2$s</xliff:g>Month
</string>
    <string name="calendar_cancel_text">"Cancel"</string>
    <string name="calendar_ok_text">"Confirm"</string>
    <!-- 专家资讯 -->
    <string name="information_title_text">"Expert Information"</string>
	<string name="information_all_text">"All"</string>
    <string name="information_expert_text">"Experts' Advice"</string>
    <string name="information_recommend_text">"Recommendations"</string>
    <string name="information_activity_text">"Activities"</string>
    <string name="information_other_text">"Other"</string>
    <string name="information_unread_text">"Unread"</string>
    <string name="information_read_text">"Read"</string>
    <string name="information_favorites_text">"Collection"</string>
    <string name ="download_title_text_format">Downloading <xliff:g id="fileName">%1$s</xliff:g></string>
    <string name ="download_complete_title_text_format">Download has been completed <xliff:g id="fileName">%1$s</xliff:g></string>
    <string name ="download_cancel_text_format">Do you want to cancel <xliff:g id="fileName">%1$s</xliff:g> download?</string>
    <string name ="network_error_msg">Network issue,Please check your internet connection.</string>
    <string name ="download_unknown_error_msg">Cannot Find Downloaded File!</string>
    <string name ="no_memory_error_msg">Storage space is running low!</string>
    <string name ="global_title_text">Warm Prompt</string>
    <string name ="global_background_download_msg">Do you want to continue to dowload in the background after closing?</string>
    <string name ="yes_text">Yes</string>
    <string name ="no_text">No</string>
    <string name ="no_sdcard_text">There is no SD card detected.</string>
    <string name ="sdcard_unread_text">SD card cannot be read and written.</string>
    <string name ="task_full_text">Task list is full.</string>
    
    <string name="yesterday_text">"Yesterday"</string>
     <string name="input_password_text">"Enter password"</string>
     <string name="input_password_num_00">"0"</string>
     <string name="input_password_num_01">"1"</string>
     <string name="input_password_num_02">"2"</string>
     <string name="input_password_num_03">"3"</string>
     <string name="input_password_num_04">"4"</string>
     <string name="input_password_num_05">"5"</string>
     <string name="input_password_num_06">"6"</string>
     <string name="input_password_num_07">"7"</string>
     <string name="input_password_num_08">"8"</string>
     <string name="input_password_num_09">"9"</string>
     <string name="forget_password_text">"Forget\npassword"</string>
     <string name="cancel_text">"Cancel"</string>
     <string name="input_psw_error">"Input password error!"</string>
     
    <!-- 疫苗 -->
     <string name ="vaccine_alarm_text_format">今天要打<xliff:g id="vaccineName">%1$s</xliff:g>啦</string>
     <string name ="vaccine_alert_content">"\t\t我们将会根据您提交的宝宝\n的出生日期重新确认疫苗接种的\n时间."</string>
     <string name ="vaccine_alert_title">温馨提示:</string>
     
     <!-- 护眼 -->
      <string name ="screen_time_page_title">Anti-addiction:</string>
      <string name ="screen_time_use_time">Duration of use(5-45min):</string>
      <string name ="screen_time_sleep_time">Duration of rest(5-45min):</string>
      <string name ="screen_time_day_use_time">Use duration of eachday(00:00-24:00):</string>
      <string name ="minute_text">min</string>
      <string name ="seconds_text">sec</string>
      
      <string name ="eyecare_page_distance_title">Distance sensor:</string>
      <string name ="eyecare_page_reverse_title">Reverse sensor:</string>
      <string name ="eyecare_page_light_sensor_title">Light sensor:</string>
      
      <string name ="default_information01_title">"American Experts Training Babies to Be \“Multi-tasking\”"</string>
      <string name ="default_information02_title">"American parents and how to develop children’s creativity?"</string>
      <string name ="default_information03_title">"Dad and Mom, Where Are We Going for Summer Vacation?"</string>
      <string name ="default_information04_title">"Optimal Recommendation"</string>
      <string name ="default_information05_title">"Other"</string>
      
      <string name ="default_information01_description">"So it totally can be “Multi-tasking” for a normal person."</string>
      <string name ="default_information02_description">"American preschool experts believe that every child has limitless creativity and their nature should be liberated."</string>
      <string name ="default_information03_description">"Look! I want to go to the children’s playground with you!"</string>
      <string name ="default_information04_description">"We require special attention and to observe children’s daily behavior to train their personality."</string>
      <string name ="default_information05_description">"Here, exciting non-stop!"</string>
      
      <string name ="default_information_text">"Coming soon !"</string>
</resources>
