<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="@dimen/input_password_layout_width"
        android:layout_height="@dimen/input_password_layout_height"
        android:layout_centerInParent="true"
        android:background="@drawable/enter_password_bg" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:paddingTop="50dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/input_password_text"
                android:textColor="#2A1806"
                android:textSize="@dimen/textsize_30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_password_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:src="@drawable/ic_password_normal"
                    android:contentDescription="@null" />

                <ImageView
                    android:id="@+id/iv_password_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:src="@drawable/ic_password_normal"
                    android:contentDescription="@null" />

                <ImageView
                    android:id="@+id/iv_password_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:src="@drawable/ic_password_normal"
                    android:contentDescription="@null" />

                <ImageView
                    android:id="@+id/iv_password_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:src="@drawable/ic_password_normal"
                    android:contentDescription="@null" />

                <ImageView
                    android:id="@+id/iv_password_05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:src="@drawable/ic_password_normal"
                    android:contentDescription="@null" />

                <ImageView
                    android:id="@+id/iv_password_06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:src="@drawable/ic_password_normal"
                    android:contentDescription="@null" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_marginTop="@dimen/input_password_keyboard_marginTop"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal" >

                <FrameLayout
                    android:id="@+id/password_key_01"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/password_num_btn"
                        android:background="@null" />

                    <TextView
                        android:id="@+id/num_01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/input_password_num_01"
                        android:textColor="#ffffff"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/password_key_02"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/password_num_btn" />

                    <TextView
                        android:id="@+id/num_02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/input_password_num_02"
                        android:textColor="#ffffff"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/password_key_03"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/password_num_btn" />

                    <TextView
                        android:id="@+id/num_03"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/input_password_num_03"
                        android:textColor="#ffffff"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"  >

                <FrameLayout
                    android:id="@+id/password_key_04"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/password_num_btn" />

                    <TextView
                        android:id="@+id/num_04"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/input_password_num_04"
                        android:textColor="#ffffff"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/password_key_05"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/password_num_btn" />

                    <TextView
                        android:id="@+id/num_05"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/input_password_num_05"
                        android:textColor="#ffffff"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/password_key_06"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/password_num_btn" />

                    <TextView
                        android:id="@+id/num_06"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/input_password_num_06"
                        android:textColor="#ffffff"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal" >

                <FrameLayout
                    android:id="@+id/password_key_07"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/password_num_btn" />

                    <TextView
                        android:id="@+id/num_07"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/input_password_num_07"
                        android:textColor="#ffffff"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/password_key_08"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/password_num_btn" />

                    <TextView
                        android:id="@+id/num_08"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/input_password_num_08"
                        android:textColor="#ffffff"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/password_key_09"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/password_num_btn" />

                    <TextView
                        android:id="@+id/num_09"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/input_password_num_09"
                        android:textColor="#ffffff"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <FrameLayout
                    android:id="@+id/password_key_00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:src="@drawable/password_num_btn" />

                    <TextView
                        android:id="@+id/num_00"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/input_password_num_00"
                        android:textColor="#ffffff"
                        android:textSize="40sp"
                        android:textStyle="bold" />
                </FrameLayout>

                <Button
                    android:id="@+id/modify_password_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password_text"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="@dimen/input_password_modify_password_paddingBottom"
                    android:background="@null"
                    android:textColor="#262FFC"
                    android:textSize="@dimen/input_password_textsize" />

                <Button
                    android:id="@+id/password_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dip"
                    android:paddingBottom="@dimen/input_password_cancle_paddingBottom"
                    android:background="@null"
                    android:text="@string/cancel_text"
                    android:textSize="@dimen/input_password_textsize" />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>